<resources>
    <string name="app_name">TipJar</string>
    <string name="home_screen_enter_amount">Enter Amount</string>
    <string name="home_screen_how_many_people">How many people?</string>
    <string name="home_screen_tip">% TIP</string>
    <string name="home_screen_save_payment">Save payment</string>
    <string name="home_screen_default_people_0">0</string>
    <string name="home_screen_total_tip">Total Tip</string>
    <string name="home_screen_per_person">Per Person</string>
    <string name="take_photo_of_receipt">Take photo of receipt</string>

    <string name="enter_your_value">0</string>
    <string name="enter_your_percentage">0</string>
    <string name="delete">Delete</string>
    <string name="enter_your_amount"><![CDATA[Please enter Amount & Percentage of Tip]]></string>
    <string name="permission_granted">Permission Granted.</string>
    <string name="permission_denied">Permission Denied.</string>
    <string name="grand_total">Grand total</string>
</resources>